modified:   app.py 	renamed:    static/Beautiful_chain_watch.jpeg -> static/product_images/Beautiful_chain_watch.jpeg 	renamed:    static/Oddity_-_DISSENT_Matte_Lipstick.jpeg -> static/product_images/Oddity_-_DISSENT_Matte_Lipstick.jpeg 	new file:   static/product_images/WIN_20240701_21_57_44_Pro.jpg 	renamed:    static/lip_gloss.jpeg -> static/product_images/lip_gloss.jpeg 	renamed:    static/maskara.jpeg -> static/product_images/maskara.jpeg 	renamed:    static/perfume.jpeg -> static/product_images/perfume.jpeg 	renamed:    static/shoes.jpeg -> static/product_images/shoes.jpeg 	modified:   templates/admin_add.html 	modified:   templates/admin_portal.html 	modified:   templates/admin_users.html 	modified:   templates/menu_bar.html 	renamed:    templates/view_product.html -> templates/products.html

--- a/templates/admin_add.html
+++ b/templates/admin_add.html
@@ -84,7 +84,7 @@
 </footer>
 
 <body>
-    <form action="http://127.0.0.1:5000/admin/portal/add" method="post" enctype="multipart/form-data">
+    <form action="http://192.0.0.2:5000/admin/portal/add" method="post" enctype="multipart/form-data" onclick="return validateImageSize">
         <b>
             <h2><center>WELCOME ADMIN<br><br>ADD YOUR PRODUCTS<br><br></center></h2>
 
@@ -105,8 +105,31 @@
             <input type="file" id="product_image" name="product_image" accept="image/png, image/jpeg, image/jpg" required>
 
             <br>
-            <center><input type="submit" value="ADD PRODUCT"></center>
+            <center><button type="submit">Upload Image</button></center>
         </b>
     </form>
+    <script>
+        function validateImageSize() {
+            // Get the file input element
+            var fileInput = document.getElementById("product_image");
+            var file = fileInput.files[0];
+            
+            // Check if a file is selected
+            if (!file) {
+                alert("Please select an image file.");
+                return false;
+            }
+            
+            // Check if the file size is greater than 2MB (2MB = 2 * 1024 * 1024 bytes)
+            var maxSize = 2 * 1024 * 1024;
+            if (file.size > maxSize) {
+                alert("File size must be less than 2MB. Please select a smaller image.");
+                return false;
+            }
+            
+            // If everything is fine, return true
+            return true;
+        }
+    </script>
 </body>
 </html>
