--- a/templates/admin_portal.html
+++ b/templates/admin_portal.html
@@ -14,12 +14,12 @@
         <div class="container">
             <div class="card">
                 <h2>Manage Users</h2>
-                <p>View, edit, and delete user accounts.</p>
+                <p>View all user accounts.</p>
                 <button onclick=users()>Access</button>
             </div>
             <div class="card">
                 <h2>Manage Products</h2>
-                <p>Add, update, or remove products.</p>
+                <p>Add, update products.</p>
                 <button onclick=add()>Access</button>
             </div>
             <div class="card">
