--- a/templates/menu_bar.html
+++ b/templates/menu_bar.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li><a href="/home">Home</a></li>
-                <li><a href="/view_product">View Products</a></li>
+                <li><a href="/products">Products</a></li>
                 <li><a href="/profile">My profile</a></li>
                 <li><a href="/about_us">About Us</a></li>
                 <li><a href="/contact_us">Contact Us</a></li>
