modified:   templates/admin_users.html

--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -39,7 +39,7 @@
 <body>
 
     <h2>Users</h2>
-
+    <h3><strong>Currently {{ users|length }} users available</strong></h3>
     <table>
         <thead>
             <tr>
