--- a/templates/admin_portal.html
+++ b/templates/admin_portal.html
@@ -30,7 +30,7 @@
             <div class="card">
                 <h2>Settings</h2>
                 <p>Update system and portal settings.</p>
-                <button>Access</button>
+                <button onclick=settings()>Access</button>
             </div>
         </div>
     </main>
@@ -39,6 +39,9 @@
     }
     function add(){
         document.location='/admin/portal/add'
+    }
+    function settings(){
+        document.location='/admin/portal/settings'
     }</script>
     <footer>
         <p>&copy; 2024 Shopesite. All rights reserved.</p>
