huge update on managing products

--- a/templates/admin_add.html
+++ b/templates/admin_add.html
@@ -105,7 +105,7 @@
             <input type="file" id="product_image" name="product_image" accept="image/png, image/jpeg, image/jpg" required>
 
             <br>
-            <center><button type="submit">Upload Image</button></center>
+            <center><button type="submit">Add product</button></center>
         </b>
     </form>
     <script>
