--- a/templates/admin_portal.html
+++ b/templates/admin_portal.html
@@ -20,7 +20,7 @@
             <div class="card">
                 <h2>Manage Products</h2>
                 <p>Add, update products.</p>
-                <button onclick=add()>Access</button>
+                <button onclick=manage()>Access</button>
             </div>
             <div class="card">
                 <h2>View Orders</h2>
@@ -37,8 +37,8 @@
     <script>function users(){
         document.location='/admin/portal/users'
     }
-    function add(){
-        document.location='/admin/portal/add'
+    function manage(){
+        document.location='/admin/portal/manage'
     }
     function settings(){
         document.location='/admin/portal/settings'
