modified:   app.py   --> buy_product function 	modified:   templates/about_us.html 	new file:   templates/buy_product.html 	modified:   templates/products.html

--- a/templates/products.html
+++ b/templates/products.html
@@ -22,7 +22,7 @@
 
         <p class="parablk">quantity : {{ i.get('quantity') }}</p>
 
-        <a href="{{ url_for('static', filename='product_images/'+i.get('image_name')) }}" class="button">BUY</a>
+        <a href="products/{{ i.get('product_name') }}" class="button">BUY</a>
 
       </div>
 
