--- a/templates/view_product.html
+++ b/templates/view_product.html
@@ -81,7 +81,7 @@
     </div>
     <div class="product-details">
         <h2>{{product_tuple.get('product_name')}}</h2>
-        <p><strong>Price:</strong> $<span id="price">{{product_tuple.get('price')}}</span></p>
+        <p><strong>Only: </strong>&dollar;<span id="price">{{product_tuple.get('price')}}</span></p>
         <p><strong>Available Quantity:</strong> <span id="available-quantity">{{product_tuple.get('quantity')}}</span></p>
         <p>
             <strong>Enter Quantity:</strong>
@@ -91,7 +91,7 @@
                 <button onclick="changeQuantity(1)">+</button>
             </div>
         </p>
-        <p><strong>Total Price:</strong> $<span id="total-price">{{product_tuple.get('price')}}</span></p>
+        <p><strong>Total Price:</strong> $<span id="total-price">{{'%.2f'|format(product_tuple.get('price')|float)}}</span></p>
         <p><strong>Description:</strong>
         {{product_tuple.get('describ')}}
         </p>
@@ -152,7 +152,7 @@
             address: address,
         };
 
-        fetch('/buy-product', {
+        fetch('/product/buy/{{product_tuple.get('product_name')}}', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
