--- a/templates/admin_portal.html
+++ b/templates/admin_portal.html
@@ -25,7 +25,7 @@
             <div class="card">
                 <h2>View Orders</h2>
                 <p>Analyze sales and activity reports.</p>
-                <button>Access</button>
+                <button onclick=orders()>Access</button>
             </div>
             <div class="card">
                 <h2>Settings</h2>
@@ -42,6 +42,9 @@
     }
     function settings(){
         document.location='/admin/portal/settings'
+    }
+    function orders(){
+        document.location = '/admin/portal/orders'
     }</script>
     <footer>
         <p>&copy; 2024 Shopesite. All rights reserved.</p>
