--- a/templates/admin_orders.html
+++ b/templates/admin_orders.html
@@ -12,7 +12,7 @@
             padding: 20px;
         }
         h2 {
-            text-align: center;
+            text-align: left;
             color: #333;
         }
         table {
@@ -38,7 +38,7 @@
 </head>
 <body>
 
-    <h2>Users</h2>
+    <h2>Orders</h2>
     <h3><strong>Currently {{ orders|length }} orders</strong></h3>
     <table>
         <thead>
