--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -12,7 +12,7 @@
             padding: 20px;
         }
         h2 {
-            text-align: center;
+            text-align: left;
             color: #333;
         }
         table {
