new feature that enables adding external links

--- a/templates/admin_add.html
+++ b/templates/admin_add.html
@@ -84,7 +84,7 @@
 </footer>
 
 <body>
-    <form action="http://192.0.0.2:5000/admin/portal/add" method="post" enctype="multipart/form-data" onclick="return validateImageSize">
+    <form action="/admin/portal/add" method="post" enctype="multipart/form-data" onclick="return validateImageSize">
         <b>
             <h2><center>WELCOME ADMIN<br><br>ADD YOUR PRODUCTS<br><br></center></h2>
 
