modified:   templates/contact_us.html -> updated email 	modified:   templates/login.html -> improved UI 	modified:   templates/register.html -> improved UI

--- a/templates/contact_us.html
+++ b/templates/contact_us.html
@@ -3,6 +3,6 @@
 {%block content%}
 	<h1>Contact Us</h1>
 	<form>
-<a>onlinefashionshopping24x7@gmail.com</a>
+<a href='mailto:support@shopesite.com'>support@shopesite.com</a>
 	</form>
 {%endblock%}
