--- a/templates/admin_update.html
+++ b/templates/admin_update.html
@@ -101,6 +101,9 @@
                 if (data.status === 'Success') {
                     window.location.href = data.redirect_url; // Redirect on success
                 }
+                else{
+                    console.log('Something went wrong')
+                }
             })
             .catch(error => {
                 console.error('Error:', error);
